force-app/main/default/objects/TestDynamicFields__c/TestDynamicFields__c.object-meta.xml
<CustomObject>
    <label>TestDynamicFields</label>
    <nameField>
        <label>TestDynamicFields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestDynamicFields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>