force-app/main/default/objects/TestDynamicFields__c/fields/Picklist2__c.field-meta.xml
<CustomField>
    <fullName>Picklist2__c</fullName>
    <label>Picklist2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
            <value>
                <fullName>Value3</fullName>
            </value>
            <value>
                <fullName>Value4</fullName>
            </value>
            <value>
                <fullName>Value5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>