force-app/main/default/objects/TestDynamicFields__c/fields/Picklist3__c.field-meta.xml
<CustomField>
    <fullName>Picklist3__c</fullName>
    <label>Picklist3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spider Man</fullName>
            </value>
            <value>
                <fullName>Incredible Hulk</fullName>
            </value>
            <value>
                <fullName>Guardians of the Galaxy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>