force-app/main/default/objects/TestDynamicFields__c/fields/Show1__c.field-meta.xml
<CustomField>
    <fullName>Show1__c</fullName>
    <label>Show1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>