force-app/main/default/objects/TestDynamicFields__c/fields/Show2__c.field-meta.xml
<CustomField>
    <fullName>Show2__c</fullName>
    <label>Show2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>