force-app/main/default/objects/TestDynamicFields__c/fields/Show3__c.field-meta.xml
<CustomField>
    <fullName>Show3__c</fullName>
    <label>Show3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>